--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Elders ReactJs</title>
-</head>
-<body>
-	<div id="app"></div>
-	<script src="/client/bundle.js"></script>
-</body>
+	<head>
+		<title>Elders ReactJs</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="cleartype" content="on">
+		<meta charset="utf-8">
+	</head>
+	<body>
+		<div id="app"></div>
+		<script src="/client/bundle.js"></script>
+	</body>
 </html>
