--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 		<meta charset="utf-8">
 	</head>
 		<link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/48938155eb24b4ccdde09426066869504c6dab3c/dist/css/bootstrap.min.css">
+			<link rel="stylesheet" type="text/css" href="/client/styles/styles.css">
 	<body>
+		<div class="container">
 		<div id="app"></div>
+		</div>
 		<script src="/client/bundle.js"></script>
 	</body>
 </html>
